# osal

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile
.github/workflows/: ci-macos.yml
posix-mac-addons/src/stubs/: rt.h
src/bsp/generic-linux/: build_options.cmake
src/bsp/pc-linux/src/: bsp_start.c
src/os/inc/: common_types.h
src/os/portable/: os-impl-posix-dl.c
src/os/posix/: CMakeLists.txt  osapi.c  ostimer.c
src/os/posix-mac/: CMakeLists.txt
src/os/posixmacos/: CMakeLists.txt
src/os/posixmacos/inc/: os-impl-io.h  os-posix.h
src/os/posixmacos/src/: os-impl-binsem.c  os-impl-console.c  os-impl-countsem.c  os-impl-files.c  os-impl-mutex.c  os-impl-tasks.c  os-impl-timebase.c
src/os/shared/: osapi-module.c
src/os/shared/src/: osapi-time.c
src/tests/bin-sem-test/: bin-sem-test.c
src/tests/timer-test/: timer-test.c
src/unit-test-coverage/ut-stubs/override_inc/: assert.h
src/unit-test-coverage/ut-stubs/src/: osapi-shared-common-stubs.c
src/unit-test-coverage/vxworks/: CMakeLists.txt
src/unit-test-coverage/vxworks/adaptors/src/: ut-adaptor-dirtable-stub.c  ut-adaptor-filetable-stub.c
src/unit-tests/oscore-test/: ut_oscore_test.c
src/unit-tests/osloader-test/: CMakeLists.txt  ut_osloader_test_platforms.h
src/unit-tests/ostimer-test/: ut_ostimer_test.c  ut_ostimer_timerio_test.c
src/unit-tests/shared/: ut_os_stubs.h
